--- a/web-app/css/helptips.css
+++ b/web-app/css/helptips.css
@@ -1,4 +1,4 @@
-.helptips_div{display:none;}
+.helptips_div{display:none; padding: 0.2em 0;}
 .helptips_icon{background-repeat:no-repeat;padding-left:24px;background-position:4px center;}
 .helptips_icon_tip{background-image:url('helptips_icon_tip.png');}
 .helptips_icon_all{background-image:url('helptips_icon_all.png');}
