--- a/web-app/css/helptips.css
+++ b/web-app/css/helptips.css
@@ -1,4 +1,6 @@
 .helptips_div{display:none;}
+.helptips_popup{}
+.helptips-dialog-widget{}
 .helptips_icon{background-repeat:no-repeat;padding-left:24px;background-position:4px center;}
 .helptips_icon_tip{background-image:url('helptips_icon_tip.png');}
 .helptips_icon_all{background-image:url('helptips_icon_all.png');}
